Added : Functions for LabelControl And Pagination
